icell/tests/compile_fail/scoped/outlives-1.stderr
error[E0505]: cannot move out of `owner` because it is borrowed
  --> $DIR/outlives-1.rs:9:10
   |
7  |     let x = owner.read(&value);
   |             ----- borrow of `owner` occurs here
8  | 
9  |     drop(owner);
   |          ^^^^^ move out of `owner` occurs here
10 | 
11 |     assert_eq!(*x, 10);
   |     ------------------- borrow later used here
